Small changes to formatting in jobs.html Changed header colour to fix contrast issues

--- a/styles/jobs.css
+++ b/styles/jobs.css
@@ -1,9 +1,8 @@
-section {
+.listing {
     border: 2px solid darkslategray;
-    background-color: #334BFF;
+    background-color: #00AFFF;
     border-radius: 10px;
-    width: 40%;
-    margin-left: 10%;
+    width: 70%;
     text-align: left;
 }
 aside {
@@ -16,14 +15,6 @@ aside {
     float: right;
 }
 
-p {
-    border: 2px solid darkslategray;
-    border-radius: 10px;
-    width: 90px;
-    text-align: center;
-    background-color: white;
-    margin: auto;
-}
 
 h2 {
     text-align: center;
@@ -37,3 +28,15 @@ table th {
     padding: 1em;
 }
 
+p {
+    border: 2px solid;
+    border-radius: 10px;
+    width: 25%;
+    padding: 1em;
+    text-align: center;
+    margin-right: auto;
+}
+
+p a {
+        color: #000;
+}
