--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,12 +20,16 @@ header {
     border-radius: 40px;
     margin: 0.5em;
     padding: 0.5em;
-    background-color: #3769ff;
+    background-color: #00AFFF;
     text-align: center;
     text-decoration-color: white;
 }
 
-
+nav a {
+    text-decoration: none;
+    padding: 1em;
+    color: black;
+}
 
 /* Apply page specific styling */
 
